--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@tailwindcss/line-clamp": "^0.3.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swiper": "^7.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
