--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@tailwindcss/line-clamp": "^0.3.0",
+    "axios": "^0.24.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sharp": "^0.29.3",
     "swiper": "^7.3.3"
   },
   "devDependencies": {
