--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@tailwindcss/line-clamp": "^0.3.0",
     "axios": "^0.24.0",
     "next": "latest",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-js-pagination": "^3.0.2",
     "sharp": "^0.29.3",
-    "swiper": "^7.3.3"
+    "swiper": "^7.3.3",
+    "tar": "^6.1.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
