--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@tailwindcss/line-clamp": "^0.3.0",
     "axios": "^0.24.0",
-    "next": "latest",
+    "next": "^12.0.7",
     "query-string": "^7.0.1",
+    "rc-rate": "^2.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.7",
     "react-js-pagination": "^3.0.2",
     "sharp": "^0.29.3",
     "swiper": "^7.3.3",
