--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
@@ -13,6 +14,7 @@
     "@tailwindcss/line-clamp": "^0.3.0",
     "axios": "^0.24.0",
     "next": "^12.0.7",
+    "next-auth": "^4.0.6",
     "query-string": "^7.0.1",
     "rc-rate": "^2.9.1",
     "react": "^17.0.2",
