--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-js-pagination": "^3.0.2",
     "sharp": "^0.29.3",
     "swiper": "^7.3.3",
-    "tar": "^6.1.11"
+    "tar": "^6.1.11",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
