--- a/package.json
+++ b/package.json
@@ -30,5 +30,12 @@
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
-  }
+  },
+  "name": "y",
+  "version": "y",
+  "description": "y",
+  "main": "y",
+  "repository": "da",
+  "author": "DESKTOP-7NP33DO\\Loc <ducloc20810@gmail.com>",
+  "license": "MIT"
 }
