--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@reduxjs/toolkit": "^1.7.1",
     "@tailwindcss/line-clamp": "^0.3.0",
     "axios": "^0.24.0",
     "next": "^12.0.7",
@@ -21,6 +22,9 @@
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
     "react-js-pagination": "^3.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "sharp": "^0.29.3",
     "swiper": "^7.3.3",
     "tar": "^6.1.11",
