--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sharp": "^0.29.3",
     "swiper": "^7.3.3",
     "tar": "^6.1.11",
+    "uuid": "^8.3.2",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
