--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-image-gallery": "^1.2.7",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^7.2.6",
+    "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "sharp": "^0.29.3",
