--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
@@ -23,6 +24,8 @@
     "react-image-gallery": "^1.2.7",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^7.2.6",
+    "react-spinners": "^0.11.0",
+    "react-textarea-autosize": "^8.3.3",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
