--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
     "react-js-pagination": "^3.0.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-spinners": "^0.11.0",
     "react-textarea-autosize": "^8.3.3",
